# ayyboy-advance

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: publish_screenshots.yml
debugger/: Cargo.toml
debugger/src/: emulator.rs  event.rs  main.rs  renderer.rs
debugger/src/dbg/: debugger.rs  mod.rs
debugger/src/dbg/widgets/: cpu.rs  disasm.rs  memory.rs  mod.rs  ppu.rs
frontend/: Cargo.toml
frontend/src/: emulator.rs  event.rs  main.rs  renderer.rs
frontend/src/dbg/: debugger.rs  tracked_value.rs
frontend/src/dbg/widgets/: cpu.rs  disasm.rs  memory.rs  ppu.rs
gba-core/: Cargo.toml  build.rs
gba-core/src/: gba.rs  lib.rs  tests.rs
gba-core/src/arm7tdmi/: cpu.rs  decoder.rs  error.rs  handlers.rs  mod.rs  mode.rs  pipeline.rs  registers.rs  symbolizer.rs  timer.rs
gba-core/src/audio/: apu.rs
gba-core/src/cartridge/: database.rs  eeprom.rs  flash.rs  mod.rs  sram.rs  storage.rs
gba-core/src/input/: joypad.rs  registers.rs
gba-core/src/memory/: device.rs  dma.rs  mmio.rs  registers.rs
gba-core/src/script/: engine.rs  mod.rs  proxy.rs
gba-core/src/video/: mod.rs  ppu.rs  registers.rs  tile.rs
rom-db/: Cargo.toml
rom-db-ui/: package-lock.json  package.json
rom-db-ui/app/: SearchComponent.tsx  layout.tsx  page.tsx
rom-db-ui/app/api/image/: route.ts
rom-db/src/: emulator.rs  main.rs
scripts/: dump_swi.rhai  example.rhai  scooby_fix_eeprom.rhai  scooby_fix_flash_read.rhai  scooby_openbus.rhai
src/: emulator.rs  joypad.rs  logging.rs  main.rs  tests.rs
src/arm7tdmi/: cpu.rs  decoder.rs  handlers.rs  mod.rs  mode.rs  pipeline.rs  registers.rs  symbolizer.rs  timer.rs
src/audio/: apu.rs
src/frontend/: debugger.rs  event.rs  mod.rs  renderer.rs  state.rs
src/frontend/dbg/: debugger.rs  event.rs  mod.rs
src/frontend/dbg/widgets/: cpu.rs  disasm.rs  memory.rs  mod.rs  ppu.rs
src/frontend/widgets/: cpu.rs  memory.rs
src/input/: joypad.rs  mod.rs
src/memory/: device.rs  dma.rs  mmio.rs  mod.rs  registers.rs
src/script/: engine.rs  proxy.rs
src/video/: mod.rs  ppu.rs  registers.rs
