[package]
name = "ayyboy-advance"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
bitmatch = "0.1.1"
eframe = "0.28.1"
egui = "0.28.1"
crossbeam-channel = "0.5.13"
egui-phosphor = "0.6.0"
lazy_static = "1.5.0"
egui_extras = "0.28.1"
spdlog-rs = { version = "0.3.13", features = ["source-location"] }
goblin = "0.9.2"
