[package]
name = "ayyboy-advance"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28.1"
eframe = "0.28.1"
bitflags = "2.6.0"
bitmatch = "0.1.1"
crossbeam-channel = "0.5.13"
egui-phosphor = "0.6.0"
lazy_static = "1.5.0"
egui_extras = "0.28.1"
goblin = "0.9.2"
rhai = { version = "1.17.1", features = ["sync"] }
clap = { version = "4.5.35", features = ["derive"] }
log = { version = "0.4", features = ["release_max_level_off"] }
simple_logger = { version = "5.0.0", default-features = false, features = [
    "colors",
] }

[features]
verbose_debug = []

[profile.dev]
opt-level = 3
