[package]
name = "ayydbg"
version = "0.1.0"
edition = "2021"
default-run = "ayydbg"

[dependencies]
gba-core = { path = "../gba-core", features = ["verbose_debug"] }
egui = "0.31.1"
egui-phosphor = "0.9.0"
egui_extras = "0.31.1"
eframe = "0.31.1"
crossbeam-channel = "0.5.13"
lazy_static = "1.5.0"
log = { version = "0.4", features = ["release_max_level_off"] }
simple_logger = { version = "5.0.0", default-features = false, features = [
    "colors",
] }
clap = { version = "4.5.38", features = ["derive"] }
zip = { version = "4.0.0", default-features = false, features = ["deflate"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }
chrono = "0.4.41"
egui-toast = "0.17.0"
shadow-rs = { version = "1.2.0", default-features = false }

[build-dependencies]
shadow-rs = "1.2.0"
